ADD delete method in infoplant
