# nodeServer/src/routes/infoplant/infoplant.ts
@@ -5,5 +5,6 @@ const router = express.Router();
 
 router.post('/',authJwt, infoPlantController.addInfoPlant);
 router.put('/',authJwt, infoPlantController.editInfoPlant);
+router.delete('/',authJwt, infoPlantController.deleteInfoPlant);
 router.get('/list',authJwt, infoPlantController.infoPlantList);
 export default router;
